# KecerdasanBuatan

HuggingFace/: README.md
HuggingFace/mistral/src/: main.rs
HuggingFace/phi/src/: main.rs
HuggingFace/rwkv/: Cargo.toml
HuggingFace/rwkv/src/: main.rs
ModelBahasaBesar/: nomor1.md  nomor2.md
PenguasaanRust/No2/borrowing/: borrowing.rs
PenguasaanRust/No2/clone/: clone.rs
PenguasaanRust/No2/copy/: copy.rs
PenguasaanRust/No2/dangling/: dangling.rs
PenguasaanRust/No2/mutable/: mutable.rs
PenguasaanRust/No2/ownership/: ownership.rs
PenguasaanRust/No2/reference/: reference.rs
PenguasaanRust/No2/scope/: scope.rs
PenguasaanRust/No2/slice/: slice.rs
PenguasaanRust/No3/: no3.rs
PenguasaanRust/No4/: main.rs
PenguasaanRust/No6/: readme.md
PenguasaanRust/No7/: readme.md
