[package]
name = "rwkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.5"


candle-core = {git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = {git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }

serde_json = "1.0"
hf-hub="0.3"
tracing-subscriber="0.3"
tracing-chrome="0.7"
tokenizers="0.15"

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
flash-attn = ["candle-transformers/flash-attn"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]